# rust-haskell-ffi

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  default.nix  shell.nix
examples/: Cargo.toml  haskell-demo.cabal
examples/app/: Main.hs
examples/src/: main.rs
nix/: sources.json
src/: lib.rs
